--- a/app/src/main/res/layout/fragment_articles.xml
+++ b/app/src/main/res/layout/fragment_articles.xml
@@ -1,49 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#ff0">
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipeRefreshLayout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        tools:listitem="@layout/article_item" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:scrollbars="vertical"
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/article_item" />
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-    <!--
-       <androidx.constraintlayout.widget.ConstraintLayout
-           android:id="@+id/errorLayout"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent">
-
-           <Button
-               android:id="@+id/refreshButton"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:text="@string/refresh_button"
-               app:layout_constraintBottom_toBottomOf="parent"
-               app:layout_constraintEnd_toEndOf="parent"
-               app:layout_constraintStart_toStartOf="parent"
-               app:layout_constraintTop_toTopOf="parent" />
-
-           <TextView
-               android:id="@+id/refreshLabel"
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content"
-               android:layout_marginBottom="16dp"
-               android:text="@string/refresh_label"
-               android:textAppearance="@style/TextAppearance.AppCompat.Large"
-               app:layout_constraintBottom_toTopOf="@+id/refreshButton"
-               app:layout_constraintEnd_toEndOf="@+id/refreshButton"
-               app:layout_constraintStart_toStartOf="@+id/refreshButton" />
-       </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-</FrameLayout>
